# Understanding-the-in-situ-Solar-Wind-Properties

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: HCS_parameters_update_CR2257.txt
data/: HCS + Sunspots + ACE.csv  HCS + Sunspots.csv  HCS Cleaned.csv  Sunspot Number NASA.json  Sunspot Number NASA.txt  observed-solar-cycle-indices.json
src/: 01_ACE_Mission_EDA.ipynb  02_ACE_Mission_Kmeans.ipynb  03_ACE_Mission_DBSCAN.ipynb  04_HCS_Sunspots_Reading_EDA.ipynb  05_HCS_Sunspots_Descriptive_Analytics.ipynb  06_HCS_Forecasting.ipynb  ACE_Mission_DBSCAN.ipynb  ACE_Mission_EDA.ipynb  ACE_Mission_Kmeans.ipynb  HCS_EAD_Modeling.ipynb  HCS_Forecasting.ipynb  HCS_Sunspots_Descriptive_Analytics.ipynb  HCS_Sunspots_Reading_EAD.ipynb  HCS_Sunspots_Reading_EDA.ipynb
tests/: ACE EDA.ipynb  ACE Models.ipynb  ACE Models_BM_Test.ipynb
