[tool.poetry]
name = "poetry-solar-wind"
version = "0.1.0"
description = ""
authors = ["Spicynugg3t <mahanb@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
spacey = "^0.1.1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
