[tool.poetry]
name = "poetry-solar-wind"
version = "0.1.0"
description = ""
authors = ["Spicynugg3t <mahanb@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
spacey = "^0.1.1"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.3"
tables = "^3.9.2"
h5py = "^3.10.0"
plotly = "^5.20.0"
altair = "^5.3.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
nbformat = "^5.10.3"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
